2010-04-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Specify proper expansion context in `finishedit'.

	A translation error was introduced 2010-03-27 by:
	"Move "expansion + output" to b-kwxout.[hc]; use exp context".
	* rcsedit.c (finishedit): Specify `delimstuffed' to
	be false in the expansion context passed to `expandline'.

2010-04-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module `readlink'.

	* rcsedit.c (naturalize) [!HAVE_READLINK]: Delete this portion.

2010-04-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use a space to stash ignored phrases.

	* base.h (parse_state): Delete member `ignoredp'; add `ignore'.
	* rcslex.c (warnignore): Initialize space
	for ignored phrases, if not `large_memory'.
	(Lexinit): If there is space for ignored phrases, clear it.
	(getphrases): Save ignored phrases in `LEX (ignore)'; rename
	local macro from `savech_' to `SAVECH'; make it a statement;
	update its callers finish with a semicolon; #undef it at eofunc.

2010-04-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use a space for symlink-resolution scratch.

	* rcsedit.c (naturalize): Rename from `resolve_symlink';
	define unconditionally; bifurcate internals for the case of
	!HAVE_READLINK; take out-arg `symbolicp'; set to indicate
	symlink resolution occurred; use space for local allocation.
	(rcswriteopen): Use `naturalize';
	do failed-symlink-check unconditionally.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use a space for `expandline' scratch.

	* base.h (manifestation): Remove member `keyval'; add `lparts'.
	* b-kwxout.c: #include "b-divvy.h".
	(LPARTS): New #define.
	(ENSURE_LPARTS): New macro.
	(expandline): Create and use space `LPARTS' for scanning scratch.

2010-04-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use spaces for "ci -k" support.

	* rcskeep.c (sorry): New static func.
	(badly_terminated): Use `sorry'; also, take `savep', if set,
	finish and then brush off the partially constructed string.